--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,12 @@ name = "docker-proof-of-concept"
 version = "0.1.0"
 description = "Proof of concept for a Python application using Docker."
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12.2"
 dependencies = [
     "numpy",
     "opencv-python",
-    "pypylon"
 ]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
